kubernetes/hortusfox/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hortusfox
  namespace: hortusfox

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: hortusfox
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: 'true'
      labels:
        app.kubernetes.io/name: hortusfox
    spec:
      containers:
      - name: hortusfox
        image: ghcr.io/danielbrendel/hortusfox-web:v5.7@sha256:8c286b6656920071c4c10142203566b5305702806117d01a66be6ba66d27a104
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: data
          mountPath: /var/www/html/public/images
          subPath: images
        - name: data
          mountPath: /var/www/html/storage/logs
          subPath: logs
        - name: data
          mountPath: /var/www/html/storage/backup
          subPath: backup
        - name: data
          mountPath: /var/www/html/public/themes
          subPath: themes
        - name: data
          mountPath: /var/www/html/storage/migrate
          subPath: migrate
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: hortusfox-data
