kubernetes/hortusfox/mariadb-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: mariadb
  namespace: hortusfox

spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    name: mysql
  selector:
    app.kubernetes.io/name: mariadb
