kubernetes/hortusfox/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: hortusfox
  namespace: hortusfox

spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app.kubernetes.io/name: hortusfox
